Solved problem with cart dropdown, button was not fitting

--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -25,6 +25,7 @@
 
   button {
     margin-top: auto;
+    font-size: 1.3rem;
   }
 }
 .cart--dropdown__empty {
